syntax = "proto3";

package order;
option java_multiple_files = true;
option java_package = "br.edu.fema.grpc";
option java_outer_classname="OrderProto";

service OrderService {
  rpc createOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string product_name = 1;
  int32 quantity = 2;
  float unit_price = 3;
  Payment payment = 4;
}

message Payment {
  string method = 1;
  optional CreditCard credit_card = 2;
}

message CreditCard {
  int32 instalments = 1;
  string card_brand = 2;
}

message OrderResponse {
  string product_name = 1;
  string status = 2;
  string estimated_delivery_date = 3;
  string created_at = 4;
  Payment payment = 5;
}